--- a/site/css/style.css
+++ b/site/css/style.css
@@ -4,7 +4,10 @@
 }
 
 body{
-  height:100vh;
+  /* height:100vh; */
+  width:100vw;
+  /* width:100vw; */
+  /* overflow-x: hidden; */
   /* background-color: rgba(158,202,250,0.6); */
   /* border:1px solid green; */
 }
@@ -15,12 +18,20 @@ body{
   border:1px solid black;
 } */
 
+
+  /* position: absolute; */
+  /* position:fixed; */
+  /* left:880px;right:80px; */
+
+  /* justify-content:flex-end; */
+
+
 img{
   border:1px solid green;
   /* position:absolute;
   top:10px; */
   margin:100px 0px 0px 80px;
-  position:relative;
+  position:absolute;
 }
 
 .background-color{
@@ -57,4 +68,19 @@ h2{
   position:absolute;
   top:200px; left:600px;
 
+}
+
+#navigation {
+  /* display:flex; */
+  border: 1px solid green;
+  margin:0px 80px 0 80px;
+  position: fixed;
+  width:100vw;
+  /* width: auto; */
+}
+
+
+.flex-item{
+    width:50px;
+    height:100px;
 }
