--- a/site/css/style.css
+++ b/site/css/style.css
@@ -39,6 +39,19 @@ img{
     background-size: cover;
 
 }
+#container div:nth-child(1){
+  /* border: 1px solid yellow; */
+  margin-top: 600px;
+}
+
+.content:nth-child(2){
+ background-color: yellow;
+}
+
+/* #container .section:nth-child(even){
+  position: relative;
+  left:300px; */
+  /* border: 1px solid yellow;} */
 
 h1{
   padding: 50px 0px 0px 50px;
@@ -70,17 +83,72 @@ h2{
 
 }
 
-#navigation {
-  /* display:flex; */
-  border: 1px solid green;
-  margin:0px 80px 0 80px;
+/* #navigation{
+  border:1px solid green;
   position: fixed;
-  width:100vw;
-  /* width: auto; */
+  display:flex;
+  justify-content:space-around;
+  padding: 50px 0px 0px 80px;
+  margin: 50px -308px 0px 80px;
+}
+
+/* .flex-item{
+  width:130px;
+  height:100px;
+} */
+h3{
+  /* border:1px solid green; */
+  padding:0px 0px 0px 200px;
+  margin:0px 0px 0px 0px;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 10rem;
+  font-weight: 200;
+  /* position:relative; */
+  color:rgba(158,202,250,1);
+}
+
+h4{
+  /* border:1px solid black; */
+  font-size: 1.4rem;
+  font-weight: bold;
+  letter-spacing: 1.2px;
+  /* padding: 0px 0px 0px 300px; */
+  /* position: absolute;
+  left:220px; */
+}
+
+p{
+  /* border:1px solid rgb(0, 7, 255); */
+  font-family: 'Rubik', sans-serif;
+  font-size: 2rem;
+  font-weight: lighter;
+  letter-spacing: 1.2px;
+  line-height: 1.3;
+  color: #333333;
+  padding: 50px 0px 0px 0px;
+  /* margin: 60px 0px 0px 0px; */
+
+  /* font-style:italic; */
 }
 
 
-.flex-item{
-    width:50px;
-    height:100px;
+/* .section{
+  border: 1px solid green;
+
+} */
+
+.content{
+  /* border:1px solid blue; */
+  /* position: relative; */
+ margin: -150px 0px 200px 0px;
+ padding: 0px 400px 0px 330px;
+
+}
+
+.content:nth-child(4){
+  /* border:1px solid blue; */
+  /* position: relative; */
+ /* margin: -150px 0px 200px 0px; */
+ padding: 0px 200px 0px 330px;
+
 }
