--- a/site/css/style.css
+++ b/site/css/style.css
@@ -44,7 +44,7 @@ img{
   margin-top: 600px;
 }
 
-.content:nth-child(2){
+.content:nth-child(1){
  background-color: yellow;
 }
 
@@ -96,16 +96,6 @@ h2{
   width:130px;
   height:100px;
 } */
-h3{
-  /* border:1px solid green; */
-  padding:0px 0px 0px 200px;
-  margin:0px 0px 0px 0px;
-  font-family: 'Libre Baskerville', serif;
-  font-size: 10rem;
-  font-weight: 200;
-  /* position:relative; */
-  color:rgba(158,202,250,1);
-}
 
 h4{
   /* border:1px solid black; */
@@ -132,10 +122,32 @@ p{
 }
 
 
-/* .section{
-  border: 1px solid green;
+.section{
+  /* border:1px solid green; */
+  padding:0px 0px 0px 200px;
+  margin:0px 0px 0px 0px;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 40rem;
+  font-weight: 200;
+  /* position:relative; */
+  color:rgba(158,202,250,0.5);
 
-} */
+}
+
+.section:hover{
+  transition-delay: 2s;
+
+}
+
+.section:nth-child(3){
+  /* color:yellow; */
+  padding-left: 600px;
+}
+
+.section:nth-child(7){
+  /* color:yellow; */
+  padding-left: 600px;
+}
 
 .content{
   /* border:1px solid blue; */
@@ -145,10 +157,41 @@ p{
 
 }
 
+.content:nth-child(2){
+  /* border:1px solid blue; */
+  /* position: relative; */
+ /* margin: -150px 0px 200px 0px; */
+ padding: 0px 100px 0px 330px;
+
+}
+
 .content:nth-child(4){
   /* border:1px solid blue; */
   /* position: relative; */
  /* margin: -150px 0px 200px 0px; */
- padding: 0px 200px 0px 330px;
+ padding: 0px 100px 0px 760px;
+
+}
+
+footer{
+  width:100vw;
+  border:1px solid yellow;
+  /* position: fixed; */
+  /* display:flex; */
+}
+
+footer > p:nth-child(1){
+  font-family: 'Rubik', sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: 1.2px;
+  width:100vw;
+  position: relative;
+}
+
+footer > p:nth-child(2){
+  font-family: 'Rubik', sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: 1.2px;
+  position: absolute;
 
 }
