--- a/site/css/style.css
+++ b/site/css/style.css
@@ -3,183 +3,117 @@
   padding:0;
 }
 
-body{
-  /* height:100vh; */
-  width:100vw;
-  /* width:100vw; */
-  /* overflow-x: hidden; */
-  /* background-color: rgba(158,202,250,0.6); */
-  /* border:1px solid green; */
-}
-
-
-nav ul{
-  list-style: none;
-  text-align: right;
-  font-size: 2rem;
-  font-family: 'Rubik', sans-serif;
-  font-weight: bold;
-  position: fixed;
-  top:100px;right:200px;
-
-}
-
-nav ul li{
-  display: inline-block;
-  margin: 20px 20px 20px 20px;
-}
-
-img{
-  border:1px solid green;
-  /* position:absolute;
-  top:10px; */
-  margin:100px 0px 0px 80px;
-  position:absolute;
-}
-
 .background-color{
     background-color: rgba(158,202,250,1);
     background-size: cover;
 
 }
+
+nav ul{
+  list-style: none;
+  text-align: right;
+  font-size: 14px;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 400;
+  letter-spacing: 1.4px;
+  position: fixed;
+  top: 80px;right:100px;
+  z-index: 9;
+}
+
+nav ul li{
+
+  display: inline-block;
+  margin: -50px 20px 20px 20px;
+}
+
 #container div:nth-child(1){
   /* border: 1px solid yellow; */
-  margin-top: 600px;
+  margin-top: 100px;
 }
 
-.content:nth-child(1){
- background-color: yellow;
+div{
+    height: 700px;
 }
-
-/* #container .section:nth-child(even){
-  position: relative;
-  left:300px; */
-  /* border: 1px solid yellow;} */
 
 h1{
-  padding: 50px 0px 0px 50px;
-  width:60vw; height:30vh;
+  padding: 450px 0px 0px 100px;
+  width:100vw; height:50vh;
   /* border:1px solid green; */
-  font-family: 'Rubik', sans-serif;
-  font-size: 3.5em;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 6.5em;
   color:white;
-  font-weight: bold;
-  line-height: 60px;
-  letter-spacing: 1.8px;
-  position:absolute;
-  top:200px; left:600px;
-
+  font-weight:bolder;
+  line-height: 1.15;
+  letter-spacing: 1.6px;
 }
 
 h2{
-  padding: 170px 0px 0px 50px;
-  width:60vw; height:30vh;
-  /* border:1px solid green; */
-  font-family: 'Rubik', sans-serif;
-  font-size: 1.5em;
+  /* border:1px solid yellow; */
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 14px;
   color:white;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 60px;
-  letter-spacing: 1.4px;
-  position:absolute;
-  top:200px; left:600px;
+  letter-spacing: 1.5px;
+  position: relative;
+  top:-800px;
+  margin-left: 100px;
 
 }
 
-h4{
+span{
+    /* border:1px solid yellow; */
+    float:left;
+    font-family: 'Libre Baskerville', serif;
+    font-size: 10rem;
+    color:rgba(158,202,250,1);
+    margin-top: -20px;
+    margin-left:100px;
+
+}
+
+h3{
+  float:left;
+  position: absolute;
   /* border:1px solid black; */
   font-size: 1.4rem;
-  font-weight: bold;
-  letter-spacing: 1.2px;
-  /* padding: 0px 0px 0px 300px; */
-  /* position: absolute;
-  left:220px; */
+  font-weight:bolder;
+  letter-spacing: 2px;
+  margin-left: 300px;
+  /* margin-top: 20px; */
 }
 
 p{
+  float: left;
+  position: absolute;
+  top:50px;
   /* border:1px solid rgb(0, 7, 255); */
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-size: 2rem;
-  font-weight: lighter;
+  font-weight:100;
   letter-spacing: 1.2px;
   line-height: 1.3;
   color: #333333;
-  padding: 50px 0px 0px 0px;
-  /* margin: 60px 0px 0px 0px; */
-
-  /* font-style:italic; */
+  margin-left: 300px;
+  margin-right: 150px;
 }
 
 
-section{
-  /* border:1px solid green; */
-  padding:0px 0px 0px 200px;
-  margin:0px 0px 0px 0px;
-  font-family: 'Libre Baskerville', serif;
-  font-size: 40rem;
-  font-weight: 200;
-  /* position:relative; */
-  color:rgba(158,202,250,0.5);
-
-}
-
-.section:nth-child(1){
-  /* color:yellow; */
-  padding-left: 600px;
-}
-
-.section:nth-child(7){
-  /* color:yellow; */
-  padding-left: 600px;
-}
-
-.content{
-  /* border:1px solid blue; */
+#section-1-div {
   /* position: relative; */
- margin: -150px 0px 200px 0px;
- padding: 0px 400px 0px 330px;
+  height:500px;
 
 }
 
-.content:nth-child(2){
-  /* border:1px solid blue; */
-  /* position: relative; */
- /* margin: -150px 0px 200px 0px; */
- padding: 0px 100px 0px 330px;
-
+#section-2-div span{
+  margin-left: 300px;
 }
 
-.content:nth-child(4){
-  /* border:1px solid blue; */
-  /* position: relative; */
- /* margin: -150px 0px 200px 0px; */
- padding: 0px 100px 0px 760px;
-
+#section-2-div h3{
+  margin-left: 500px;
 }
 
-footer{
-  width:100vw;
-  border:1px solid yellow;
-  /* position: fixed; */
-  /* display:flex; */
-}
-
-footer > p:nth-child(1){
-  font-family: 'Rubik', sans-serif;
-  font-size: 1.5rem;
-  letter-spacing: 1.2px;
-  width:100vw;
-  position: relative;
-}
-
-footer > p:nth-child(2){
-  font-family: 'Rubik', sans-serif;
-  font-size: 1.5rem;
-  letter-spacing: 1.2px;
-  position: absolute;
-
-}
-
-.left {
-
+#section-2-div p{
+  margin-left: 500px;
 }
