--- a/site/css/style.css
+++ b/site/css/style.css
@@ -46,7 +46,7 @@ nav ul{
   font-weight: 400;
   letter-spacing: 1.4px;
   position: fixed;
-  top: 40px;right:100px;
+  top: 50px;right:100px;
   z-index: 9;
   /* background-color: rgba(158,202,250,0.5); */
 }
@@ -91,7 +91,7 @@ h2{
   line-height: 60px;
   letter-spacing: 1.5px;
   position: relative;
-  top:-835px;
+  top:-826px;
   margin-left: 100px;
 
 }
@@ -120,13 +120,14 @@ h3{
   font-weight:bolder;
   letter-spacing: 2px;
   margin-left: 300px;
+  line-height: 1.5;
   /* margin-top: 20px; */
 }
 
 p{
   float: left;
   position: absolute;
-  top:50px;
+  top:80px;
   /* border:1px solid rgb(0, 7, 255); */
   font-family: 'Nunito Sans', sans-serif;
   font-size: 2rem;
