--- a/site/css/style.css
+++ b/site/css/style.css
@@ -114,7 +114,7 @@ span:hover{
 
 h3{
   float:left;
-  position: absolute;
+  /* position: absolute; */
   /* border:1px solid black; */
   font-size: 1.4rem;
   font-weight:bolder;
@@ -126,8 +126,8 @@ h3{
 
 p{
   float: left;
-  position: absolute;
-  top:80px;
+  /* position: absolute; */
+  margin-top:80px;
   /* border:1px solid rgb(0, 7, 255); */
   font-family: 'Nunito Sans', sans-serif;
   font-size: 2rem;
