--- a/site/css/style.css
+++ b/site/css/style.css
@@ -99,8 +99,9 @@ h2{
 span{
     /* border:1px solid yellow; */
     float:left;
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Nunito Sans', sans-serif;
     font-size: 10rem;
+    font-weight: 400;
     color:rgba(158,202,250,1);
     margin-top: -20px;
     margin-left:100px;
@@ -127,7 +128,7 @@ h3{
 p{
   float: left;
   /* position: absolute; */
-  margin-top:80px;
+  margin-top:50px;
   /* border:1px solid rgb(0, 7, 255); */
   font-family: 'Nunito Sans', sans-serif;
   font-size: 2rem;
